# ucnsim

./: .gitignore  .rootrc  CMakeLists.txt  INSTALL.txt  KDTree.cpp  KDTree.hpp  KDTreeNode.cpp  KDTreeNode.hpp  LICENSE.txt  MWC.cpp  MWC.hpp  Makefile  Makefile.arch  NodeStack.cpp  NodeStack.hpp  Point.cpp  Point.hpp  README.txt  TestExample.cpp  TestKDTree.cpp  UCNLinkDef.h  fabfile.py  ucnsim.tmproj
config/: UCNSIM_TRUNK.sh  UCN_HEAD.sh  buildtest_config.cfg  expmt_config.cfg  matt_ucnsim_configure.sh  sandbox_config.cfg  ucn_rootalias.C  ucn_rootlogoff.C  ucn_rootlogon.C  ucnsim.sh
data/: emptyingtime_0_8.root  goodtrackpoints.root  model_cryoedm_data.root  model_sourcevalve_data.root  sandbox_data.root  sourcetube_800s.root  test_sourcevalve_intersection_data.root
data/emptyingtimes/: emptyingtime_0_5.root  emptyingtime_0_7.root
docs/: designdocument.aux
docs/designDocument/: designdocument.tex
docs/designdocumentimages/: Event Loop.graffle  MultipleInheritance.graffle  MultipleInheritance2.graffle  ShapeInheritance.graffle  UCNSIMClassStructure.graffle  UCNShapeInheritance.graffle  Untitled.graffle  fig1-NestedBox.graffle  propagationloop.graffle
docs/lossesForHighEnergies/: neutronlossesforlargeenergies.tex
docs/rateOfCollisions/: rateOfCollisions.tex
docs/volAvgMagField/: volAvgMagField.tex
geom/: VerticalTubeParaMagField.C  circularbend_geom.C  circularbentguide_geom.C  circularbentguide_geom.root  circularbentguide_visualisation.root  cryoedm_empty_cells_geom.C  cryoedm_empty_source.C  cryoedm_fill_cells_geom.C  cryoedm_geom.C  geometries.h  guide_section_geom.C  horizontalguidetube_geom.C  horizontalguidetube_geom.root  model_cryoedm_geom.C  model_cryoedm_geom.root  model_cryoedm_vis.root  model_edm_geom.C  model_parameters.h  model_sourcetube_geom.C  model_sourcetube_geom.root  model_sourcetube_vis.root  model_sourcevalve_geom.C  model_sourcevalve_geom.root  model_sourcevalve_vis.root  prevolume_geom.C  ramseycell_geom.C  ramseycell_geom.root  sourcetube_geom.C  sourcevalve_geom.C  test_circularbend_geom.C  test_circularbend_geom.root  test_circularbend_vis.root  test_sourcevalve_intersection_geom.root  test_sourcevalve_intersection_vis.root  test_verticaltube_geom.root  test_verticaltube_vis.root  transfer_section_geom.C  verticaltube_geom.C  verticaltube_geom.root
geom/cryoedm/: cryoedm_empty_cells_geom.C  cryoedm_fill_cells_geom.C  cryoedm_geom.C  empty_cells.C  empty_source.C  empty_source_direct_to_detector.C  empty_source_no_valve.C
geom/detector_tube/: detector_tube.C
htmldoc/: (UNKNOWN)_Index.html  ClassHierarchy.html  ClassIndex.html  Constants.h  LibraryDependencies.html  ListOfTypes.html  SRC_Index.html  TUCNDataParser.h  TUCNDataParser.html  TUCNExperiment.h  TUCNExperiment.html  TUCNGeoBBox.h  TUCNGeoBBox.html  TUCNGeoBuilder.h  TUCNGeoBuilder.html  TUCNGeoCtub.html  TUCNGeoManager.h  TUCNGeoManager.html  TUCNGeoMaterial.h  TUCNGeoMaterial.html  TUCNGeoNavigator.h  TUCNGeoNavigator.html  TUCNGeoTube.h  TUCNGeoTube.html  TUCNGeoTubeSeg.html  TUCNGravField.h  TUCNGravField.html  TUCNParticle.h  TUCNParticle.html  TUCNParticleCloud.html  Units.h  index.html
include/: Algorithms.h  BoolNode.h  BounceData.h  Box.h  Clock.h  CompositeShape.h  ConfigFile.h  Constants.h  Data.h  DataAnalysis.h  DataFileHierarchy.h  DataParser.h  ElecField.h  Element.h  Event.h  Experiment.h  Field.h  FieldArray.h  FieldData.h  FieldManager.h  FieldMap.h  FieldVertex.h  FileParser.h  FitSuite.h  GeomParameters.h  GravField.h  InitialConfig.h  KDTree.h  KDTreeNode.h  KDTreeNode.hpp  LinkDef.h  MagField.h  MagFieldArray.h  MagFieldManager.h  Material.h  Materials.h  NodeStack.h  Observable.h  Observables.h  Observer.h  (+52 more)
macros/: buildtest_plot.C  calculate_T1.C  calculate_T2.C  draw_rundata.C  emptyingtimes.C  generate_particles.C  geometry_simplebox.cxx  geometry_simplebox2.C  makehtml.C  mathmoretest.C  plot_T2_vs_Runs.C  plot_emptying_time.C  plot_finalpositions.C  plot_rundata.C  sandbox_plot.C
modules/: FindGSL.cmake
pics/: Event Loop.graffle  losscurvepoints.rtf
scripts/: pull_runs_from_scratch.sh  push_runs_to_scratch.sh  submit_job.sh
simconfig/: buildtest_config.cfg  model_cryoedm.cfg  model_sourcetube.cfg  model_sourcevalve.cfg  test_circularbend.cfg  test_sourcevalve_intersection.cfg
src/: Algorithms.cpp  Algorithms.cxx  Algorithms.h  BoolNode.cpp  BounceData.cpp  BounceData.cxx  Box.cpp  Box.cxx  CMakeLists.txt  Clock.cpp  Clock.cxx  Clock.hpp  CompositeShape.cpp  CompositeShape.cxx  CompositeShape.h  CompositeShape.hpp  ConfigFile.cpp  ConfigFile.cxx  Constants.hpp  Data.cpp  Data.cxx  Data.hpp  DataAnalysis.cpp  DataAnalysis.cxx  DataAnalysis.hpp  DataParser.cxx  ElecField.cpp  ElecField.cxx  ElecField.hpp  ElecFieldArray.cpp  ElecFieldArray.cxx  ElecFieldArray.h  ElecFieldArray.hpp  Element.cpp  Element.cxx  Experiment.cpp  Experiment.hpp  Field.cpp  FieldArray.cpp  FieldArray.hpp  (+157 more)
src/classes/: BoolNode.cxx  Box.cxx  Clock.cxx  CompositeShape.cxx  ConfigFile.cxx  Data.cxx  ElecFieldArray.cxx  Element.cxx  Event.cxx  Experiment.cxx  Field.cxx  FieldArray.cxx  FieldData.cxx  FieldManager.cxx  FieldMap.cxx  FieldVertex.cxx  FileParser.cxx  GravField.cxx  InitialConfig.cxx  InitialConfig.h  KDTree.cxx  KDTreeNode.cxx  MagFieldArray.cxx  MagFieldDipole.cxx  MagFieldLoop.cxx  MagFieldManager.cxx  Material.cxx  Observable.cxx  Observer.cxx  Particle.cxx  ParticleManifest.cxx  Point.cxx  PopulationData.cxx  Run.cxx  RunConfig.cxx  Spin.cxx  State.cxx  TRandom3a.cxx  Track.cxx  Tube.cxx  (+3 more)
src/programs/: CMakeLists.txt  batch_simulate.cpp  batch_simulate.cxx  draw_plots.cpp  draw_plots.cxx  draw_tracks.cpp  draw_tracks.cxx  generate_ucn.cpp  generate_ucn.cxx  make_T2plot.cpp  make_T2plot.cxx  make_density_snapshots.cpp  make_density_snapshots.cxx  make_plots.cpp  make_plots.cxx  plot_T2.cxx  plot_data.cxx  sandbox.cpp  sandbox.cxx  simulate_ucn.cpp  simulate_ucn.cxx  test_kdtree.cpp  test_kdtree.cxx
temp/: badtrackpoints.root  buildtest_data.root  model_sourcetube_data.root  sandbox_data.root  test_circularbend_data.root
(+214 files in other folders)
