
add_executable(batch_simulate batch_simulate.cxx)
add_executable(draw_plots draw_plots.cxx)
add_executable(draw_tracks draw_tracks.cxx)
add_executable(generate_ucn generate_ucn.cxx)
add_executable(make_density_snapshots make_density_snapshots.cxx)
add_executable(make_plots make_plots.cxx)
add_executable(make_T2plot make_T2plot.cxx)
add_executable(sandbox sandbox.cxx)
add_executable(simulate_ucn simulate_ucn.cxx)
add_executable(test_kdtree test_kdtree.cxx)


target_link_libraries( batch_simulate UCNLib)
target_link_libraries( draw_plots UCNLib)
target_link_libraries( draw_tracks UCNLib)
target_link_libraries( generate_ucn UCNLib)
target_link_libraries( make_density_snapshots UCNLib)
target_link_libraries( make_plots UCNLib)
target_link_libraries( make_T2plot UCNLib)
target_link_libraries( sandbox UCNLib)
target_link_libraries( simulate_ucn UCNLib)
target_link_libraries( test_kdtree UCNLib)