
add_executable(batch_simulate batch_simulate.cpp)
add_executable(draw_plots draw_plots.cpp)
add_executable(draw_tracks draw_tracks.cpp)
add_executable(generate_ucn generate_ucn.cpp)
add_executable(make_density_snapshots make_density_snapshots.cpp)
add_executable(make_plots make_plots.cpp)
add_executable(make_T2plot make_T2plot.cpp)
add_executable(sandbox sandbox.cpp)
add_executable(simulate_ucn simulate_ucn.cpp)
add_executable(test_kdtree test_kdtree.cpp)


target_link_libraries(batch_simulate UCN)
target_link_libraries(draw_plots UCN)
target_link_libraries(draw_tracks UCN)
target_link_libraries(generate_ucn UCN)
target_link_libraries(make_density_snapshots UCN)
target_link_libraries(make_plots UCN)
target_link_libraries(make_T2plot UCN)
target_link_libraries(sandbox UCN)
target_link_libraries(simulate_ucn UCN)
target_link_libraries(test_kdtree UCN)
